# docs/swagger.json
@@ -168,7 +168,7 @@
                 "summary": "Create a new buy order",
                 "parameters": [
                     {
-                        "description": "jsonResponse",
+                        "description": "model.OrderHandler",
                         "name": "order",
                         "in": "body",
                         "required": true,
@@ -181,7 +181,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.jsonResponse"
+                            "$ref": "#/definitions/model.OrderHandler"
                         }
                     },
                     "401": {
@@ -208,7 +208,7 @@
                 "summary": "Create A New Group",
                 "parameters": [
                     {
-                        "description": "jsonResponse",
+                        "description": "model.GroupUser",
                         "name": "user",
                         "in": "body",
                         "required": true,
@@ -248,7 +248,7 @@
                 "summary": "Create a new sell order",
                 "parameters": [
                     {
-                        "description": "jsonResponse",
+                        "description": "model.OrderHandler",
                         "name": "order",
                         "in": "body",
                         "required": true,
@@ -261,7 +261,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.jsonResponse"
+                            "$ref": "#/definitions/model.OrderHandler"
                         }
                     },
                     "401": {
@@ -293,7 +293,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.TradeHandler"
+                            "$ref": "#/definitions/model.TradeHandlerUser"
                         }
                     }
                 ],
@@ -342,6 +342,110 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/handler.jsonResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/handler.jsonResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/getgroups": {
+            "post": {
+                "description": "This API is used to get all groups which are releted to user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Get All Groups",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.UserGroups"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/handler.jsonResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/getorders": {
+            "post": {
+                "description": "This API is used to get all orders which are releted to user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Order"
+                ],
+                "summary": "Get All Orders",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Order"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/handler.jsonResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/getordertrades": {
+            "post": {
+                "description": "This API is used to get all trades which are releted to order",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Order"
+                ],
+                "summary": "Get Order Trades",
+                "parameters": [
+                    {
+                        "description": "[]model.TradeHandler",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.OrderUser"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.TradeHandler"
+                            }
                         }
                     },
                     "401": {
@@ -813,7 +917,7 @@
                 }
             }
         },
-        "model.OrderHandler": {
+        "model.Order": {
             "type": "object",
             "properties": {
                 "fiatAmount": {
@@ -830,6 +934,29 @@
                 },
                 "timeLimit": {
                     "type": "string"
+                },
+                "type": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.OrderHandler": {
+            "type": "object",
+            "properties": {
+                "fiatAmount": {
+                    "type": "number"
+                },
+                "minAmount": {
+                    "type": "number"
+                },
+                "orderid": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "number"
+                },
+                "timeLimit": {
+                    "type": "integer"
                 },
                 "type": {
                     "type": "string"
@@ -867,7 +994,24 @@
                     "type": "string"
                 },
                 "tradetime": {
+                    "type": "integer"
+                }
+            }
+        },
+        "model.TradeHandlerUser": {
+            "type": "object",
+            "properties": {
+                "method": {
                     "type": "string"
+                },
+                "orderid": {
+                    "type": "string"
+                },
+                "tradeid": {
+                    "type": "string"
+                },
+                "tradetime": {
+                    "type": "integer"
                 }
             }
         },
@@ -888,10 +1032,9 @@
                     "type": "string"
                 },
                 "groups": {
-                    "description": "roll of the user admin or user\nin: integer",
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/model.GroupUser"
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
                     }
                 },
                 "last_name": {
@@ -913,6 +1056,17 @@
                 "verified": {
                     "description": "Is users phone number verified\nin: boolean",
                     "type": "boolean"
+                }
+            }
+        },
+        "model.UserGroups": {
+            "type": "object",
+            "properties": {
+                "groups": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
                 }
             }
         },
